// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactPlaceholder renders a custom placeholder when the content is not ready 1`] = `
Array [
  <div
    className=""
  >
    Custom Placeholder
  </div>,
]
`;

exports[`ReactPlaceholder renders a string custom placeholder when the content is not ready 1`] = `
Array [
  null,
]
`;

exports[`ReactPlaceholder renders content when it's ready, then a placeholder when it's not ready, and finally content again when it's ready 1`] = `
Array [
  <div>
    Some ready content
  </div>,
]
`;

exports[`ReactPlaceholder renders content when it's ready, then a placeholder when it's not ready, and finally content again when it's ready 2`] = `
Array [
  <TextBlock
    color="#CDCDCD"
    delay={0}
    rows={2}
  />,
]
`;

exports[`ReactPlaceholder renders content when it's ready, then a placeholder when it's not ready, and finally content again when it's ready 3`] = `
Array [
  <div>
    Some ready content
  </div>,
]
`;

exports[`ReactPlaceholder renders the content when it's ready 1`] = `
Array [
  <div>
    Some ready content
  </div>,
]
`;

exports[`ReactPlaceholder renders the media placeholder when the content is not ready 1`] = `
Array [
  <MediaBlock
    color="#CDCDCD"
    delay={0}
    rows={2}
  />,
]
`;

exports[`ReactPlaceholder renders the placeholder only after the specified delay 1`] = `
Array [
  <TextBlock
    color="#CDCDCD"
    delay={10000}
    rows={2}
  />,
]
`;

exports[`ReactPlaceholder renders the rect placeholder when the content is not ready 1`] = `
Array [
  <RectShape
    color="#CDCDCD"
    delay={0}
  />,
]
`;

exports[`ReactPlaceholder renders the round placeholder when the content is not ready 1`] = `
Array [
  <RoundShape
    color="#CDCDCD"
    delay={0}
  />,
]
`;

exports[`ReactPlaceholder renders the round placeholder with animation when the content is not ready 1`] = `
Array [
  <RoundShape
    className="show-loading-animation"
    color="#CDCDCD"
    delay={0}
  />,
]
`;

exports[`ReactPlaceholder renders the text placeholder when the content is not ready 1`] = `
Array [
  <TextBlock
    color="#CDCDCD"
    delay={0}
    rows={2}
  />,
]
`;

exports[`ReactPlaceholder renders the textRow placeholder when the content is not ready 1`] = `
Array [
  <TextRow
    color="#CDCDCD"
    delay={0}
  />,
]
`;

exports[`build build script generates every needed file 1`] = `
Array [
  "ReactPlaceholder.d.ts",
  "ReactPlaceholder.js",
  "index.d.ts",
  "index.js",
  "placeholders/MediaBlock.d.ts",
  "placeholders/MediaBlock.js",
  "placeholders/RectShape.d.ts",
  "placeholders/RectShape.js",
  "placeholders/RoundShape.d.ts",
  "placeholders/RoundShape.js",
  "placeholders/TextBlock.d.ts",
  "placeholders/TextBlock.js",
  "placeholders/TextRow.d.ts",
  "placeholders/TextRow.js",
  "placeholders/index.d.ts",
  "placeholders/index.js",
  "reactPlaceholder.css",
  "utils.d.ts",
  "utils.js",
]
`;
